--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,6 @@
 
 @layer utilities {
     .grayed-out-disabled {
-        @apply disabled:opacity-50
+        @apply disabled:opacity-50;
     }
 }
